[metadata]
name = combilog
version = 0.0.0
description = A tool to interact with the combilog by Theodor Friedrichs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/theendlessriver13/combilog
author = Jonas Kittner
author_email = theendlessriver13@users.noreply.github.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = combilog
install_requires =
    pyserial>=3.4
python_requires = >=3.6.1

[bdist_wheel]
universal = True
