[metadata]
name = combilog
version = 2.0.1
description = A tool to interact with the combilog by Theodor Friedrichs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jkittner/combilog
author = Jonas Kittner
author_email = jkittner@users.noreply.github.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = combilog
install_requires =
    pyserial>=3.4
python_requires = >=3.8

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unreachable = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
